html finished, style added, forms style not finished

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,19 +1,11 @@
 <%- include('./partials/header') %>
-
-    <section class="team-section">
-
-        <h3>OUR TEAM</h3>
-        <div class="two-grid">
-            <div>
-                <img src="/assets/img/team-img-group.png" alt="">
-            </div>
+    <main>
+        <section class="about-section two-grid">
             <article>
-                <h1>MASTER CHEF</h1>
-                <h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at velit maximus, molestie est a,
+                <h1>ABOUT US</h1>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at velit maximus, molestie est a,
                     tempor
-                    magna.
-                </h3>
+                    magna.</h3>
                 <p>
                     Integer ullamcorper neque eu purus euismod, ac faucibus mauris posuere. Morbi non ultrices ligula.
                     Sed
@@ -22,8 +14,11 @@
                     tincidunt feugiat diam convallis pharetra. Nulla facilisis semper laoreet.
                 </p>
             </article>
-        </div>
-    </section>
-    </main>
+            <figure>
+                <img src="/assets/img/about-img-group.png" alt="">
+            </figure>
 
+        </section>
+
+    </main>
     <%- include('./partials/footer') %>
