--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,18 +5,22 @@
             <h1>CONTACT</h1>
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at velit maximus, molestie est a, tempor
                 magna.</h3>
-            <form action="">
+            <form action="" class="contact-form">
                 <div>
                     <input type="text" placeholder="Name">
                     <input type="text" placeholder="Email">
                     <input type="text" placeholder="Phone">
                 </div>
-                <textarea name="" cols="30" rows="5">Message</textarea>
-                <div>
+                <textarea name="" cols="30" rows="4">Message</textarea>
 
-                    <span> 5th London Boulevard, U.K.
-                         +40 729 131 637/+40 726 458 782
-                         office@mindblister.com</span>
+                <div>
+                    <span>
+                        <img src="/assets/img/location.png" alt="">
+                        5th London Boulevard, U.K.
+                        <img src="/assets/img/phone.png" alt="">
+                        +40 729 131 637/+40 726 458 782
+                        <img src="/assets/img/mail.png" alt="">
+                        office@mindblister.com</span>
 
                     <input type="submit" value="SEND MESSAGE">
                 </div>
