--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,14 +24,14 @@
                         RESTAURANT
                     </h2>
                     <h1>HUNGRY PEOPLE</h1>
-                    <div>
-                        <a href="/booking"><button>BOOK TABLE</button></a>
-                        <a href="/menu"><button>EXPLORE</button></a> 
+                    <div class="header-links">
+                        <a href="/booking"><button class="btn-yellow">BOOK TABLE</button></a>
+                        <a href="/menu"><button class="btn-transparent">EXPLORE</button></a>
                     </div>
-                    
-                  <a href="/"><img class="arrow" src="/assets/img/down-btn.png" alt="arrow"></a>
+
+                    <a href="/"><img class="arrow" src="/assets/img/down-btn.png" alt="arrow"></a>
                 </div>
-           
+
                 <div class="social-media">
                     <img src="/assets/img/facebook.png" alt="fb">
                     <img src="/assets/img/twitter.png" alt="twitter">
